--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +21,17 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "qrcode": "^1.5.4",
+    "passport-local": "^1.0.0",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
-    "@types/express": "latest"
+    "@types/cors": "^2.8.19",
+    "@types/express": "latest",
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
+    "tsc-watch": "^7.1.1",
+    "typescript": "^5.8.3"
   }
 }
