--- a/backend/package.json
+++ b/backend/package.json
@@ -21,16 +21,19 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "passport": "^0.7.0",
-    "qrcode": "^1.5.4",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "latest",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "tsc-watch": "^7.1.1",
     "typescript": "^5.8.3"
   }
